会议开发完善

--- a/app/src/main/res/layout/fragment_meeting.xml
+++ b/app/src/main/res/layout/fragment_meeting.xml
@@ -4,10 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/include_toolbar_layout_text" />
+
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dp_42">
 
         <com.scwang.smart.refresh.header.MaterialHeader
             android:layout_width="match_parent"
