--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingTop="@dimen/dp_50">
+                android:paddingTop="@dimen/dp_40">
 
                 <ImageView
                     android:layout_width="@dimen/dp_50"
@@ -130,35 +130,45 @@
                 android:orientation="horizontal"
                 android:padding="@dimen/dp_10">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:padding="@dimen/dp_10"
-                    android:text="忘记密码"
-                    android:textColor="@color/textColorBlack"
-                    android:textSize="@dimen/sp_12"
-                    android:textStyle="bold" />
+                <!--                <TextView-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_gravity="bottom"-->
+                <!--                    android:padding="@dimen/dp_10"-->
+                <!--                    android:text="忘记密码"-->
+                <!--                    android:textColor="@color/textColorBlack"-->
+                <!--                    android:textSize="@dimen/sp_12"-->
+                <!--                    android:textStyle="bold" />-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginLeft="@dimen/dp_20"
-                    android:layout_marginRight="@dimen/dp_20"
-                    android:onClick="@{ln.onToRegister}"
-                    android:padding="@dimen/dp_10"
-                    android:text="|" />
+                <!--                <TextView-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_gravity="bottom"-->
+                <!--                    android:layout_marginLeft="@dimen/dp_20"-->
+                <!--                    android:layout_marginRight="@dimen/dp_20"-->
+                <!--                    android:onClick="@{ln.onToRegister}"-->
+                <!--                    android:padding="@dimen/dp_10"-->
+                <!--                    android:text="|" />-->
 
+                <!--                <TextView-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_gravity="bottom"-->
+                <!--                    android:onClick="@{ln.onToRegister}"-->
+                <!--                    android:padding="@dimen/dp_10"-->
+                <!--                    android:text="用户注册"-->
+                <!--                    android:textColor="@color/textColorBlack"-->
+                <!--                    android:textSize="@dimen/sp_12"-->
+                <!--                    android:textStyle="bold" />-->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:onClick="@{ln.onToRegister}"
-                    android:padding="@dimen/dp_10"
-                    android:text="用户注册"
+                    android:onClick="@{ln.onToMeeting}"
+                    android:padding="@dimen/dp_15"
+                    android:text="输入会议邀请码进入会议"
                     android:textColor="@color/textColorBlack"
-                    android:textSize="@dimen/sp_12"
+                    android:textSize="@dimen/sp_14"
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
